--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="./app/controller/Search.js"></script>
     <script src="./app/controller/Export.js"></script>
     <script src="./app/controller/YearSlide.js"></script>
+    <script src="./app/controller/ResultCounter.js"></script>
     <script src="./app/service/Map.js"></script>
     <script src="./app/service/HeatMapSourceGenerator.js"></script>
     <script src="./app/service/GeoNodeSolr.js"></script>
@@ -55,6 +56,7 @@
                 </div>
                 <div class="row map-row">
                   <div class="col-md-8 col-md-offset-2">
+                      <ng-include src="'./app/view/resultCounterText.html'"></ng-include>
                       <!-- the ol3 map -->
                       <div class="map" id="map"></div>
                   </div>
@@ -66,6 +68,7 @@
                 </div>
             </div>
         </div>
+        <!-- map popup -->
         <ng-include src="'./app/view/mapPopup.html'"></ng-include>
     </div>
 </body>
