--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/2.13.0/rzslider.min.js"></script>
     <script src="./assets/lib/proj4js/proj4.js"></script>
     <script src="./config/3857.js"></script>
-    <!-- <script src="./assets/lib/ol3/ol-debug.js"></script> -->
-    <script src="./assets/lib/ol3/ol.js"></script>
+    <script src="./assets/lib/ol3/ol-debug.js"></script>
+    <!-- <script src="./assets/lib/ol3/ol.js"></script> -->
 
     <!-- APP CSS -->
     <link rel="stylesheet" href="./assets/css/app.css">
@@ -34,7 +34,6 @@
     <script src="./app/controller/ResultCounter.js"></script>
     <script src="./app/service/Map.js"></script>
     <script src="./app/service/HeatMapSourceGenerator.js"></script>
-    <script src="./app/service/GeoNodeSolr.js"></script>
 
 </head>
 
