--- a/index-dev.html
+++ b/index-dev.html
@@ -18,13 +18,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/2.13.0/rzslider.min.js"></script>
     <script src="./assets/lib/proj4js/proj4.js"></script>
     <script src="./config/3857.js"></script>
-    <script src="./assets/lib/ol3/ol.js"></script>
+    <script src="./assets/lib/ol3/ol-debug.js"></script>
 
     <!-- APP CSS -->
     <link rel="stylesheet" href="./assets/css/app.css">
 
-    <!-- Minified client -->
-    <script src="./build/hm-client.min.js"></script>
+    <!-- APP JS -->
+    <script src="./app/app.js"></script>
+    <script src="./app/controller/Main.js"></script>
+    <script src="./app/controller/BackgroundLayer.js"></script>
+    <script src="./app/controller/Search.js"></script>
+    <script src="./app/controller/Export.js"></script>
+    <script src="./app/controller/YearSlide.js"></script>
+    <script src="./app/controller/ResultCounter.js"></script>
+    <script src="./app/service/Map.js"></script>
+    <script src="./app/service/HeatMapSourceGenerator.js"></script>
+
 </head>
 
 <body ng-controller="mainCtrl">
