--- a/index-dev.html
+++ b/index-dev.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body ng-controller="mainCtrl">
+<body ng-controller="MainController">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
