--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="./build/hm-client.min.js"></script>
 </head>
 
-<body ng-controller="mainCtrl">
+<body ng-controller="MainController">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
