query box should be smaller than the map extent

--- a/index-dev.html
+++ b/index-dev.html
@@ -19,6 +19,11 @@
     <script src="./config/3857.js"></script>
     <script src="./assets/lib/ol3/ol-debug.js"></script>
 
+    <!-- additional ol3 features -->
+    <script src="./assets/lib/ol3-ext/interaction/transforminteraction.js"></script>
+    <script type="text/javascript" src="./assets/lib/ol3-ext/filter/filter.js"></script>
+    <script type="text/javascript" src="./assets/lib/ol3-ext/filter/maskfilter.js"></script>
+
     <!-- APP CSS -->
     <link rel="stylesheet" href="./assets/css/app.css">
 
