use ol3-ext of viglio

--- a/index-dev.html
+++ b/index-dev.html
@@ -17,9 +17,14 @@
     <script src="./assets/lib/ui-bootstrap/ui-bootstrap-tpls-1.3.3.min.js"></script>
     <script src="./assets/lib/proj4js/proj4.js"></script>
     <script src="./config/3857.js"></script>
-    <script src="./assets/lib/ol3/ol-debug.js"></script>
+    <script src="./assets/lib/ol3/ol.js"></script>
 
     <!-- additional ol3 features -->
+    <!-- filters -->
+    <script type="text/javascript" src="./assets/lib/ol3-ext/filter/filter.js"></script>
+    <script type="text/javascript" src="./assets/lib/ol3-ext/filter/maskfilter.js"></script>
+
+    <!-- interaction -->
     <script src="./assets/lib/ol3-ext/interaction/transforminteraction.js"></script>
 
     <!-- APP CSS -->
