layout of export and date picker tools

--- a/index-dev.html
+++ b/index-dev.html
@@ -58,11 +58,9 @@
                   </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-md-offset-3">
                         <ng-include src="'./app/view/datePicker.html'"></ng-include>
                     </div>
-                    <div class="col-md-4"></div>
                 </div>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
