--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <!-- LIBRARY CSS -->
     <link rel="stylesheet" href="./assets/lib/ol3/ol.css">
     <link rel="stylesheet" href="./assets/lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/2.13.0/rzslider.min.css" />
 
     <!-- LIBRARY JS -->
     <script src="./assets/lib/jquery/jquery-2.1.3.min.js"></script>
     <script src="./assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="./assets/lib/angularjs/angular.min.js"></script>
     <script src="./assets/lib/ui-bootstrap/ui-bootstrap-tpls-1.3.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/2.13.0/rzslider.min.js"></script>
     <script src="./assets/lib/proj4js/proj4.js"></script>
     <script src="./config/3857.js"></script>
     <script src="./assets/lib/ol3/ol.js"></script>
@@ -29,46 +31,44 @@
 <body ng-controller="MainController">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
-                <div class="row">
-                  <div class="col-md-8 col-md-offset-2">
-                      <ng-include src="'./app/view/toolbarSearchField.html'"></ng-include>
-                  </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4">
-                        <ng-include src="'./app/view/datePicker.html'"></ng-include>
-                    </div>
-                    <div class="col-md-4"></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <ng-include src="'./app/view/geospatialFilter.html'"></ng-include>
-                    </div>
-                </div>
-                <div class="row map-row">
-                  <div class="col-md-8 col-md-offset-2">
-                      <ng-include src="'./app/view/resultCounterText.html'"></ng-include>
-                      <!-- the ol3 map -->
-                      <div class="map" id="map"></div>
-                  </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <ng-include src="'./app/view/userFilter.html'"></ng-include>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <ng-include src="'./app/view/exportButton.html'"></ng-include>
-                    </div>
-                </div>
+            <div class="col-md-8 col-md-offset-2">
+                <ng-include src="'./app/view/toolbarSearchField.html'"></ng-include>
             </div>
         </div>
-        <!-- map popup -->
-        <ng-include src="'./app/view/mapPopup.html'"></ng-include>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <ng-include src="'./app/view/datePicker.html'"></ng-include>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <ng-include src="'./app/view/geospatialFilter.html'"></ng-include>
+            </div>
+        </div>
+        <div class="row map-row">
+            <div class="col-md-8 col-md-offset-2">
+                <ng-include src="'./app/view/resultCounterText.html'"></ng-include>
+                <!-- the ol3 map -->
+                <div class="map" id="map"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <ng-include src="'./app/view/userFilter.html'"></ng-include>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <ng-include src="'./app/view/exportButton.html'"></ng-include>
+            </div>
+        </div>
     </div>
+
+    <!-- map popup -->
+    <ng-include src="'./app/view/mapPopup.html'"></ng-include>
+    <!-- info popup -->
+    <ng-include src="'./app/view/infoPopup.html'"></ng-include>
+
 </body>
 
 </html>
