--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <!-- APP CSS -->
     <link rel="stylesheet" href="./assets/css/app.css">
+    <link rel="stylesheet" href="./app/components/datepicker/datepicker.css">
+    <link rel="stylesheet" href="./app/components/histogram/histogram.css">
 
     <!-- Minified client -->
     <script src="./build/hm-client.min.js"></script>
@@ -37,7 +39,7 @@
         </div>
         <div class="row">
             <div class="col-md-8 col-md-offset-2 row-box">
-                <ng-include src="'./app/view/datePicker.html'"></ng-include>
+                <date-picker></date-picker>
             </div>
         </div>
         <div class="row">
