--- a/index-dev.html
+++ b/index-dev.html
@@ -55,52 +55,68 @@
 </head>
 
 <body ng-controller="MainController">
-    <div class="container-fluid">
+    <div class="container-fluid" style="background: #eee;">
         <div class="row">
 
             <div class="col-md-4 container">
-                <div class="row">
-                    <div class="col-md-12 row-box">
+                <div class="row component-padding">
+                    <div class="col-xs-12 row-box">
                         <ng-include src="'./app/view/toolbarSearchField.html'"></ng-include>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-12 row-box">
+                <div class="row component-padding">
+                    <div class="col-xs-12 row-box">
                         <ng-include src="'./app/view/geospatialFilter.html'"></ng-include>
+                    </div>
+                </div>
+                <div class="row component-padding">
+                    <div class="col-md-12 row-box">
+                      <blockquote class="twitter-tweet" data-lang="es">
+                        <p lang="en" dir="ltr">Join us Aug. 21 to 23 in Bonn, Germany for the GeoNode Summer 2016 Code Sprint at FOSS4G!
+                          <a href="https://twitter.com/hashtag/opensource?src=hash">#opensource</a>
+                          <a href="https://twitter.com/hashtag/opendata?src=hash">#opendata</a>
+                          <a href="https://twitter.com/hashtag/gis?src=hash">#gis</a>
+                          <a href="https://t.co/59Cl6h6to9">https://t.co/59Cl6h6to9</a>
+                        </p>&mdash; GeoNode (@GeoNode) <a href="https://twitter.com/GeoNode/status/763037136157278208">9 de agosto de 2016</a>
+                      </blockquote>
+                      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-8 container">
-                <div class="col-md-7">
-                    <div class="row">
-                        <div class="col-md-12 row-box">
-                            <date-picker></date-picker>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <div class="row">
-                        <div class="col-md-12 row-box" row-box>
-                            <ng-include src="'./app/view/userFilter.html'"></ng-include>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 row-box">
-                            <ng-include src="'./app/view/exportButton.html'"></ng-include>
-                        </div>
-                    </div>
-                </div>
                 <div class="row">
-                    <div class="col-md-12 row-box">
-                        <ng-include src="'./app/view/resultCounterText.html'"></ng-include>
-                        <!-- the ol3 map -->
-                        <div class="map" id="map"></div>
+                    <div class="col-md-7">
+                        <div class="row component-padding">
+                            <div class="col-md-12 row-box">
+                                <date-picker></date-picker>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="row component-padding">
+                            <div class="col-xs-12 row-box" row-box>
+                                <ng-include src="'./app/view/userFilter.html'"></ng-include>
+                            </div>
+                        </div>
+                        <div class="row component-padding">
+                            <div class="col-md-12 row-box">
+                                <ng-include src="'./app/view/exportButton.html'"></ng-include>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="row component-padding">
+                            <div class="col-md-12 row-box">
+                              <ng-include src="'./app/view/resultCounterText.html'"></ng-include>
+                              <!-- the ol3 map -->
+                              <div class="map" id="map"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
     <!-- map popup -->
