--- a/index-dev.html
+++ b/index-dev.html
@@ -55,7 +55,7 @@
 </head>
 
 <body ng-controller="MainController">
-    <div class="container-fluid" style="background: #eee;">
+    <div class="container-fluid">
         <div class="row">
 
             <div class="col-md-4 container">
