--- a/index-dev.html
+++ b/index-dev.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="./assets/css/app.css">
     <link rel="stylesheet" href="./app/components/datepicker/datepicker.css">
     <link rel="stylesheet" href="./app/components/histogram/histogram.css">
+    <link rel="stylesheet" href="./app/components/tweetlist/tweet.css">
 
     <!-- APP JS -->
     <script src="./app/app.js"></script>
@@ -51,6 +52,7 @@
     <script src="./app/components/modules.js"></script>
     <script src="./app/components/histogram/HistogramDirective.js"></script>
     <script src="./app/components/datepicker/DatepickerDirective.js"></script>
+    <script src="./app/components/tweetlist/tweetlistDirective.js"></script>
 
 </head>
 
@@ -71,15 +73,9 @@
                 </div>
                 <div class="row component-padding">
                     <div class="col-md-12 row-box">
-                      <blockquote class="twitter-tweet" data-lang="es">
-                        <p lang="en" dir="ltr">Join us Aug. 21 to 23 in Bonn, Germany for the GeoNode Summer 2016 Code Sprint at FOSS4G!
-                          <a href="https://twitter.com/hashtag/opensource?src=hash">#opensource</a>
-                          <a href="https://twitter.com/hashtag/opendata?src=hash">#opendata</a>
-                          <a href="https://twitter.com/hashtag/gis?src=hash">#gis</a>
-                          <a href="https://t.co/59Cl6h6to9">https://t.co/59Cl6h6to9</a>
-                        </p>&mdash; GeoNode (@GeoNode) <a href="https://twitter.com/GeoNode/status/763037136157278208">9 de agosto de 2016</a>
-                      </blockquote>
-                      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                      <div class="row">
+                        <tweetlist></tweetlist>
+                      </div>
                     </div>
                 </div>
             </div>
