Insert changes in index.html

--- a/index.html
+++ b/index.html
@@ -47,15 +47,9 @@
                 </div>
                 <div class="row component-padding">
                     <div class="col-md-12 row-box">
-                      <blockquote class="twitter-tweet" data-lang="es">
-                        <p lang="en" dir="ltr">Join us Aug. 21 to 23 in Bonn, Germany for the GeoNode Summer 2016 Code Sprint at FOSS4G!
-                          <a href="https://twitter.com/hashtag/opensource?src=hash">#opensource</a>
-                          <a href="https://twitter.com/hashtag/opendata?src=hash">#opendata</a>
-                          <a href="https://twitter.com/hashtag/gis?src=hash">#gis</a>
-                          <a href="https://t.co/59Cl6h6to9">https://t.co/59Cl6h6to9</a>
-                        </p>&mdash; GeoNode (@GeoNode) <a href="https://twitter.com/GeoNode/status/763037136157278208">9 de agosto de 2016</a>
-                      </blockquote>
-                      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                      <div class="row">
+                        <tweetlist></tweetlist>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -101,5 +95,4 @@
     <ng-include src="'./app/view/infoPopup.html'"></ng-include>
 
 </body>
-
 </html>
