--- a/index.html
+++ b/index.html
@@ -33,35 +33,58 @@
 <body ng-controller="MainController">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 row-box">
-                <ng-include src="'./app/view/toolbarSearchField.html'"></ng-include>
+
+            <div class="col-md-4 container">
+                <div class="row component-padding">
+                    <div class="col-xs-12 row-box">
+                        <ng-include src="'./app/view/toolbarSearchField.html'"></ng-include>
+                    </div>
+                </div>
+                <div class="row component-padding">
+                    <div class="col-xs-12 row-box">
+                        <ng-include src="'./app/view/geospatialFilter.html'"></ng-include>
+                    </div>
+                </div>
+                <div class="row component-padding">
+                    <div class="col-md-12 row-box">
+                      <div class="row">
+                        <tweetlist></tweetlist>
+                      </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 row-box">
-                <date-picker></date-picker>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 row-box">
-                <ng-include src="'./app/view/geospatialFilter.html'"></ng-include>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 row-box">
-                <ng-include src="'./app/view/resultCounterText.html'"></ng-include>
-                <!-- the ol3 map -->
-                <div class="map" id="map"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 row-box" row-box>
-                <ng-include src="'./app/view/userFilter.html'"></ng-include>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 row-box">
-                <ng-include src="'./app/view/exportButton.html'"></ng-include>
+
+            <div class="col-md-8 container">
+                <div class="row">
+                    <div class="col-md-7">
+                        <div class="row component-padding">
+                            <div class="col-md-12 row-box">
+                                <date-picker></date-picker>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="row component-padding">
+                            <div class="col-xs-12 row-box" row-box>
+                                <ng-include src="'./app/view/userFilter.html'"></ng-include>
+                            </div>
+                        </div>
+                        <div class="row component-padding">
+                            <div class="col-md-12 row-box">
+                                <ng-include src="'./app/view/exportButton.html'"></ng-include>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="row component-padding">
+                            <div class="col-md-12 row-box">
+                              <ng-include src="'./app/view/resultCounterText.html'"></ng-include>
+                              <!-- the ol3 map -->
+                              <div class="map" id="map"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -72,5 +95,4 @@
     <ng-include src="'./app/view/infoPopup.html'"></ng-include>
 
 </body>
-
 </html>
