Concatenate and minify css with less (#30)
* Concatenate and minify css with less

* Remove redundant code

* Concatenated styles in index-dev.html, add grunt watch

* Add development styles to tmp folder

--- a/index-dev.html
+++ b/index-dev.html
@@ -7,6 +7,7 @@
     <title>Solr &dash; Heatmap (Sample UI)</title>
 
     <!-- LIBRARY CSS -->
+    <script src="http://localhost:9091"></script>
     <link rel="stylesheet" href="./assets/lib/ol3/ol.css">
     <link rel="stylesheet" href="./assets/lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/2.13.0/rzslider.min.css" />
@@ -31,9 +32,7 @@
 
     <!-- APP CSS -->
     <link rel="stylesheet" href="./assets/css/app.css">
-    <link rel="stylesheet" href="./app/components/datepicker/datepicker.css">
-    <link rel="stylesheet" href="./app/components/histogram/histogram.css">
-    <link rel="stylesheet" href="./app/components/tweetlist/tweet.css">
+    <link rel="stylesheet" href="./tmp/styles.css">
 
     <!-- APP JS -->
     <script src="./app/app.js"></script>
