--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
     <!-- APP CSS -->
     <link rel="stylesheet" href="./assets/css/app.css">
-    <link rel="stylesheet" href="./app/components/datepicker/datepicker.css">
-    <link rel="stylesheet" href="./app/components/histogram/histogram.css">
+    <link rel="stylesheet" href="./build/styles.min.css">
 
     <!-- Minified client -->
     <script src="./build/hm-client.min.js"></script>
