--- a/index-dev.html
+++ b/index-dev.html
@@ -44,6 +44,7 @@
     <script src="./app/controller/ResultCounter.js"></script>
     <script src="./app/controller/GeospatialFilterCtrl.js"></script>
     <script src="./app/controller/UserFilterCtrl.js"></script>
+    <script src="./app/service/Normalize.js"></script>
     <script src="./app/service/Map.js"></script>
     <script src="./app/service/HeatMapSourceGenerator.js"></script>
 
