--- a/index-dev.html
+++ b/index-dev.html
@@ -39,21 +39,23 @@
     <script src="./app/controller/InfoWindowCtrl.js"></script>
     <script src="./app/controller/Main.js"></script>
     <script src="./app/controller/BackgroundLayer.js"></script>
-    <script src="./app/controller/Search.js"></script>
-    <script src="./app/controller/Export.js"></script>
-    <script src="./app/controller/ResultCounter.js"></script>
-    <script src="./app/controller/GeospatialFilterCtrl.js"></script>
-    <script src="./app/controller/UserFilterCtrl.js"></script>
     <script src="./app/service/Normalize.js"></script>
     <script src="./app/service/Map.js"></script>
     <script src="./app/service/HeatMapSourceGenerator.js"></script>
+    <script src="./app/service/InfoService.js"></script>
 
     <!-- APP components -->
     <script src="./app/components/modules.js"></script>
     <script src="./app/components/histogram/HistogramDirective.js"></script>
     <script src="./app/components/datepicker/DatepickerDirective.js"></script>
     <script src="./app/components/tweetlist/tweetlistDirective.js"></script>
+    <script src="./app/components/toolbarSearch/toolbarSearchDirective.js"></script>
+    <script src="./app/components/userFilter/userFilterDirective.js"></script>
+    <script src="./app/components/geospatialFilter/geospatialFilterDirective.js"></script>
+    <script src="./app/components/exportButton/exportButtonDirective.js"></script>
+    <script src="./app/components/heatmap/heatmapDirective.js"></script>
 
+    <script src="./tmp/templates.js"></script>
 </head>
 
 <body ng-controller="MainController">
@@ -63,12 +65,12 @@
             <div class="col-md-4 container">
                 <div class="row component-padding">
                     <div class="col-xs-12 row-box">
-                        <ng-include src="'./app/view/toolbarSearchField.html'"></ng-include>
+                        <toolbar-search></toolbar-search>
                     </div>
                 </div>
                 <div class="row component-padding">
                     <div class="col-xs-12 row-box">
-                        <ng-include src="'./app/view/geospatialFilter.html'"></ng-include>
+                        <geospatial-filter></geospatial-filter>
                     </div>
                 </div>
                 <div class="row component-padding">
@@ -91,22 +93,20 @@
                     </div>
                     <div class="col-md-5">
                         <div class="row component-padding">
-                            <div class="col-xs-12 row-box" row-box>
-                                <ng-include src="'./app/view/userFilter.html'"></ng-include>
+                            <div class="col-xs-12 row-box">
+                                <user-filter></user-filter>
                             </div>
                         </div>
                         <div class="row component-padding">
                             <div class="col-md-12 row-box">
-                                <ng-include src="'./app/view/exportButton.html'"></ng-include>
+                                <export-button></exportButton>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="row component-padding">
                             <div class="col-md-12 row-box">
-                              <ng-include src="'./app/view/resultCounterText.html'"></ng-include>
-                              <!-- the ol3 map -->
-                              <div class="map" id="map"></div>
+                              <heatmap></heatmap>
                             </div>
                         </div>
                     </div>
@@ -121,5 +121,4 @@
     <ng-include src="'./app/view/infoPopup.html'"></ng-include>
 
 </body>
-
 </html>
