--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="row component-padding">
                     <div class="col-md-12 row-box">
-                      <div class="row">
+                      <div class="row tweetlist-box">
                         <tweetlist></tweetlist>
                       </div>
                     </div>
