--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Solr &dash; Heatmap (Sample UI)</title>
+    <title>search</title>
 
     <!-- LIBRARY CSS -->
     <link rel="stylesheet" href="./assets/lib/ol3/ol.css">
