--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Solr &dash; Heatmap (Sample UI)</title>
+    <title>search</title>
 
     <!-- LIBRARY CSS -->
     <script src="http://localhost:9091"></script>
