Fix geospatial search field (#57)
* Add queryService for transformation between queries and extents

move convinience methods from HeatMapSourceGenerator to own service to
use it in different services/directives

* Update geospatialFilterDirective to update query and map

update the geo query and the map extent based on the input of the
directive search field

* Use queryService everywhere and remove duplicate code

--- a/404.html
+++ b/404.html
@@ -45,6 +45,7 @@
     <script src="./app/service/HeatMapSourceGenerator.js"></script>
     <script src="./app/service/InfoService.js"></script>
     <script src="./app/service/searchFilter.js"></script>
+    <script src="./app/service/queryService.js"></script>
 
     <!-- APP components -->
     <script src="./app/components/modules.js"></script>
