--- a/index-dev.html
+++ b/index-dev.html
@@ -45,6 +45,7 @@
     <script src="./app/service/HeatMapSourceGenerator.js"></script>
     <script src="./app/service/InfoService.js"></script>
     <script src="./app/service/searchFilter.js"></script>
+    <script src="./app/service/queryService.js"></script>
 
     <!-- APP components -->
     <script src="./app/components/modules.js"></script>
