--- a/index-dev.html
+++ b/index-dev.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Solr &dash; Heatmap (Sample UI)</title>
+    <title>search</title>
 
     <!-- LIBRARY CSS -->
     <script src="http://localhost:9091"></script>
@@ -16,6 +16,7 @@
     <script src="./assets/lib/jquery/jquery-2.1.3.min.js"></script>
     <script src="./assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="./assets/lib/angularjs/angular.min.js"></script>
+    <script src="./assets/lib/angularjs/angular-ui-router.js"></script>
     <script src="./assets/lib/ui-bootstrap/ui-bootstrap-tpls-1.3.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/2.13.0/rzslider.min.js"></script>
     <script src="./assets/lib/proj4js/proj4.js"></script>
@@ -39,10 +40,12 @@
     <script src="./app/controller/InfoWindowCtrl.js"></script>
     <script src="./app/controller/Main.js"></script>
     <script src="./app/controller/BackgroundLayer.js"></script>
-    <script src="./app/service/Normalize.js"></script>
     <script src="./app/service/Map.js"></script>
+    <script src="./app/service/Normalize.js"></script>
     <script src="./app/service/HeatMapSourceGenerator.js"></script>
     <script src="./app/service/InfoService.js"></script>
+    <script src="./app/service/searchFilter.js"></script>
+    <script src="./app/service/queryService.js"></script>
 
     <!-- APP components -->
     <script src="./app/components/modules.js"></script>
@@ -54,11 +57,13 @@
     <script src="./app/components/geospatialFilter/geospatialFilterDirective.js"></script>
     <script src="./app/components/exportButton/exportButtonDirective.js"></script>
     <script src="./app/components/heatmap/heatmapDirective.js"></script>
+    <script src="./app/components/search/search.js"></script>
 
     <script src="./tmp/templates.js"></script>
 </head>
 
 <body ng-controller="MainController">
+		<ui-view></ui-view>
     <div class="container-fluid">
         <div class="row">
 
@@ -75,7 +80,7 @@
                 </div>
                 <div class="row component-padding">
                     <div class="col-md-12 row-box">
-                      <div class="row">
+                      <div class="row tweetlist-box">
                         <tweetlist></tweetlist>
                       </div>
                     </div>
@@ -121,4 +126,5 @@
     <ng-include src="'./app/view/infoPopup.html'"></ng-include>
 
 </body>
+
 </html>
