--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Solr &dash; Heatmap (Sample UI)</title>
+    <title>search</title>
 
     <!-- LIBRARY CSS -->
     <link rel="stylesheet" href="./assets/lib/ol3/ol.css">
@@ -15,6 +15,7 @@
     <script src="./assets/lib/jquery/jquery-2.1.3.min.js"></script>
     <script src="./assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="./assets/lib/angularjs/angular.min.js"></script>
+    <script src="./assets/lib/angularjs/angular-ui-router.js"></script>
     <script src="./assets/lib/ui-bootstrap/ui-bootstrap-tpls-1.3.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/2.13.0/rzslider.min.js"></script>
     <script src="./assets/lib/proj4js/proj4.js"></script>
@@ -25,11 +26,12 @@
     <link rel="stylesheet" href="./assets/css/app.css">
     <link rel="stylesheet" href="./build/styles.min.css">
 
-    <!-- Minified client -->
     <script src="./build/hm-client.min.js"></script>
+
 </head>
 
 <body ng-controller="MainController">
+		<ui-view></ui-view>
     <div class="container-fluid">
         <div class="row">
 
@@ -92,4 +94,5 @@
     <ng-include src="'./app/view/infoPopup.html'"></ng-include>
 
 </body>
+
 </html>
