--- a/404.html
+++ b/404.html
@@ -7,10 +7,10 @@
     <title>search</title>
 
     <!-- LIBRARY CSS -->
-    <script src="http://localhost:9091"></script>
+    <!-- <script src="http://localhost:9091"></script> -->
     <link rel="stylesheet" href="./assets/lib/ol3/ol.css">
     <link rel="stylesheet" href="./assets/lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/2.13.0/rzslider.min.css" />
+    <link rel="stylesheet" href="./assets/lib/rzslider/rzslider.min.css" />
 
     <!-- LIBRARY JS -->
     <script src="./assets/lib/jquery/jquery-2.1.3.min.js"></script>
@@ -18,7 +18,7 @@
     <script src="./assets/lib/angularjs/angular.min.js"></script>
     <script src="./assets/lib/angularjs/angular-ui-router.js"></script>
     <script src="./assets/lib/ui-bootstrap/ui-bootstrap-tpls-1.3.3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/2.13.0/rzslider.min.js"></script>
+    <script src="./assets/lib/rzslider/rzslider.min.js"></script>
     <script src="./assets/lib/proj4js/proj4.js"></script>
     <script src="./config/3857.js"></script>
     <script src="./assets/lib/ol3/ol.js"></script>
@@ -58,6 +58,7 @@
     <script src="./app/components/exportButton/exportButtonDirective.js"></script>
     <script src="./app/components/heatmap/heatmapDirective.js"></script>
     <script src="./app/components/search/search.js"></script>
+    <script src="./app/components/keyword/keywordDirective.js"></script>
 
     <script src="./tmp/templates.js"></script>
 
