--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col-md-4 container">
                 <div class="row component-padding">
                     <div class="col-xs-12 row-box">
-                        <toolbar-search></toolbar-search>
+                        <toolbar-search number-keywords="10"></toolbar-search>
                     </div>
                 </div>
                 <div class="row component-padding">
